NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

 * added whizzy-autohide-cursor
 * fix section counters with multiple files. 
 * fix case-fold-search to nil in all whizzytex searches. 
 * added a trace of the Whizzy Cursor back into the Emacs buffer. 
 * enable redirection of navigation commands to previewer stdin.

Shell-script: 

 * enable redirection of navigation commands to previewer stdin.

LaTeX macros:

 * made \WhizzyAdjustCounter not fail if counter is undefined. 
 * fix bug due to writing file names in .aux. 

Installation/Documentation:

 * fixed some quotes in configuration script.

SINCE LAST RELEASE:
===================

Emacs-mode:

 - version 1.3.0
 * Added backward compatibility of linemode with older versions. 
 - version 1.2.3
 * whizzy-toggle-debug not set whizzy-debug 
 * changed communication from whizzytex back to emacs.
 * added support for -pdf xpdf mode.
 * enter Emacs-debugger on fatal error when called in debug-mode.
 * change whizzy-sit-for for compatibility with Emacs on mac-os-10

Shell-script: 

 - version 1.2.3
 * fix configure and checkconfig to allow -initex 'tex -ini'
 * changed communication from whizzytex back to emacs.
 * added support for -pdf xpdf mode.
 * write in .waux and read in .raux to be stable in face of errors

LaTeX macros:

 - version 1.3.0
 * Fix \label to work with hyperref...
 * Experimental auto-adjustment of counters (using \label).
 - version 1.2.3
 * some changes to allow anchors with pdftex driver.
 * fixed the problem with the new hypertex package (\scrollmode). 
 * set default hyperref option to hypertex (not best, but better than nothing)
 * write in .waux and read in .raux to be stable in face of errors

Installation/Documentation:

 - version 1.3.0
 * fix in ./configure for 'latex -ini' not to block
 * ./configure default initex to 'latex -ini' if not found.
 * Fixed quotation of command names in script during installation