@@ -17,8 +17,8 @@
 Some text in the section.  
  
 \subsection {Sub}
-  
-Some text in the subsection.
+
+Some text in the subsection. 
 
 \subsubsection {SubSub} 
 
@@ -27,7 +27,9 @@ Some text in the sub-subsection.
 \newpage
 
 The cursor should follow on other pages as well. 
-This would not work without the package hyperref loaded.
+\textbf{This would not work without 
+using package \texttt{hyperref}.}
+
 
 
 \section{Foo}
